working with grpc

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,5 @@ includeBuild 'eureka-server'
 includeBuild 'api-gateway'
 includeBuild 'flight-booking-service'
 includeBuild 'flight-availability-service'
+includeBuild 'baggage-service'
+includeBuild 'notification-service'
