--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -21,3 +21,13 @@ spring.cloud.gateway.routes[2].id=status
 spring.cloud.gateway.routes[2].uri=lb://flight-booking-service
 spring.cloud.gateway.routes[2].predicates[0]=Path=/booking/status/{flightNumber}
 spring.cloud.gateway.routes[2].predicates[1]=Method=GET
+
+spring.cloud.gateway.routes[3].id=baggage
+spring.cloud.gateway.routes[3].uri=lb://baggage-service
+spring.cloud.gateway.routes[3].predicates[0]=Path=/baggage/{id}
+spring.cloud.gateway.routes[3].predicates[1]=Method=GET
+
+spring.cloud.gateway.routes[4].id=add-baggage
+spring.cloud.gateway.routes[4].uri=lb://baggage-service
+spring.cloud.gateway.routes[4].predicates[0]=Path=/baggage/add/{user-id}/{baggage}
+spring.cloud.gateway.routes[4].predicates[1]=Method=POST
